syntax = "proto3";

package pearl.av.v1;

import "google/protobuf/timestamp.proto";

message Summary {
  // record create timestamp
  google.protobuf.Timestamp create_timestamp = 1;
  // record update timestamp
  google.protobuf.Timestamp update_timestamp = 2;
  // record delete timestamp
  google.protobuf.Timestamp delete_timestamp = 3;

  // scene start timestamp
  google.protobuf.Timestamp scene_start_timestamp = 4;
  // scene end timestamp
  google.protobuf.Timestamp scene_end_timestamp = 5;

  // Required attributes
  string scene_id = 6;
  string run_id = 7;
  string device_type = 8;
  string device_id = 9;
  string city = 10;
  string country = 11;
}
